tests/tokenize.token.err
Error: Unexpected char in input
   ╭─[tests/tokenize.scm:1:1]
   │
 1 │ ```
   · ┬  
   · ╰── Unexpected char `
───╯
